--- a/estilos/estilo-mobile.css
+++ b/estilos/estilo-mobile.css
@@ -39,9 +39,11 @@ section#login{
     border-radius: 20px;
     background-color: white;
     width: 300px;
-    height: 500px;
+    height: 520px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.479);
+    transition: width .3s, heigth .3s; /*diz que ao mudar o tamanho da tela muda com uma leve animação*/
+    transition-timing-function: ease; /*da uma aliviada na animação de transição acima, deixando mais fluida*/
 }
 
 section#login > div#imagem{
@@ -54,5 +56,106 @@ section#login > div#imagem{
 
 section#login > div#formulario{
     display: block;
+    
     padding: 10px;
 }
+
+div#formulario > h1{
+    font-weight: bolder;
+    text-align: center;
+    padding: 10px 0px;
+}
+
+div#formulario > p{
+    padding: 0px 20px;
+    text-align: justify;
+    font-size: 0.8em;
+}
+
+section#login > div#formulario > form{
+    display: block;
+    margin: auto;
+    padding: 20px;
+}
+
+form > input[type=submit]{
+    display: block;
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+    background-color: #49a09d;
+    color: white;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    cursor: pointer;
+    margin-bottom: 5px;
+}
+
+form > input[type=submit]:hover{
+    background-color: #2c5e5c;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+    transition: background-color .3s;
+}
+
+form > a.botao{
+    display: block;
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+    background-color: white;
+    color: #2c5e5c;
+    font-size: 0.8em;
+    cursor: pointer;
+    padding-top: 10px;
+    text-align: center;
+    text-decoration: none;
+    border: 1px solid #2c5e5c;
+}
+
+form > a.botao:hover{
+    background-color: #49a09d;
+    color: white;
+    transition: background-color .3s;
+}
+
+div.campo > label{
+    display: none;
+}
+
+div.campo > input{
+    background-color: #53b6b3;
+    width: calc(100% - 55px);
+    height: 85%;
+    border: none;
+    border-radius: 12px;
+    transform: translateY(-12px);
+}
+
+div.campo > input:hover{
+    background-color: white;
+    transition: background-color .3s;
+}
+
+div.campo > input:focus-within{ /*deixa campo de digitação branco enquanto digita algo*/
+    background-color: white;
+    border: none;
+}
+
+div.campo > span{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+form > div.campo{
+    background-color: #5f2c82;
+    border-radius: 12px;
+    height: 40px;
+    margin: 0px 0px 5px;
+}
+
+
+
